# deepfrog

./: .gitignore  Cargo.toml  README.md  README.rst  architecture.dia  scratch.py  setup.py  trainpos.py
configs/: bertje-nld.yml  robbert-nld.yml  robbert2-nld.yml  test-eng.yml
deepfrog/: data.py  deepfrog.py  formats.py  sampler.py  tagger.py
examples/python/: ner.py  pos.py  robbert-ner.py
models/bert-lemma-cased-cgn_elex-nld/: config.json  eval_results.txt  labels.txt  test_results.txt  vocab.txt
models/bert-ner-cased-conll2002-nld/: config.json  eval_results.txt  test_results.txt
models/bert-ner-cased-sonar1-nld/: config.json  eval_results.txt  test_results.txt
models/bert-pos-cased-deepfrog-nld/: config.json  eval_results.txt
models/bert-pos-cased-frog-nld/: test_results.txt
models/robbert-ner-cased-sonar1-nld/: config.json  eval_results.txt  labels.txt  test_predictions.txt  test_results.txt
models/robbert-pos-cased-deepfrog-nld/: config.json  eval_results.txt  test_results.txt
models/robbert2-ner-cased-sonar1-nld/: added_tokens.json  config.json  eval_results.txt  merges.txt  test_predictions.txt  test_results.txt  tokenizer_config.json  vocab.json
models/robbert2-pos-cased-deepfrog-nld/: config.json  eval_results.txt  labels.txt  test_predictions.txt  test_results.txt
src/: error.rs  foliaxml.rs  json.rs  lemma.rs  lib.rs  main.rs
trainers/: extract_cgn_traindata.sh  preprocess-lemma-data.sh  requirements.txt  setup.sh  train-bert-lemma-cased-cgn+elex-nld.sh  train-bert-lemma-cased-cgn_elex-nld.sh  train-bert-ner-cased-conll2002-nld.sh  train-bert-ner-cased-multi-nld.sh  train-bert-ner-cased-sonar1-nld.sh  train-bert-pos-cased-deepfrog-nld.sh  train-conll2002-ner-nld.sh  train-deepfrog-pos-nld.sh  train-frog-pos-nld.sh  train-multi-ner-nld.sh  train-robbert-ner-cased-sonar1-nld.sh  train-robbert-pos-cased-deepfrog-nld.sh  train-robbert2-ner-cased-sonar1-nld.sh  train-robbert2-pos-cased-deepfrog-nld.sh  train_ner.sh  train_pos.sh  train_tagger.nf
trainers/inputdata/: README.md  conll2002-ner-nld.dev.txt  conll2002-ner-nld.test.txt  conll2002-ner-nld.train.txt
