[package]
name = "deepfrog"
version = "0.2.0"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
edition = "2018"

homepage = "https://github.com/proycon/deepfrog"
repository = "https://github.com/proycon/deepfrog"
documentation = "https://docs.rs/deepfrog"
categories = ["science","text-processing"]
keywords = ["nlp","text-processing","annotation","linguistics","xml"]
license = "GPL-3.0+"


[dependencies]
rust-bert = { version = "0.10.0", path = "/home/proycon/work/rust-bert" }
folia = { version = "0.0.5", path = "/home/proycon/work/folia-rust" }
clap = "2.33.0"
serde = "1.0.106"
serde_yaml = "0.8.11"
serde_derive = "1.0.106"
serde_json = "1.0.52"
thiserror = "1.0.20"
